--- a/web/docs/02-tp/01-tp1.md
+++ b/web/docs/02-tp/01-tp1.md
@@ -13,21 +13,22 @@ Vous allez mettre en place l'application en commençant par **l'interface graphi
 
 ### Interface graphique
 
+- Rien ne fonctionne.
 - Les activités affichent toujours les mêmes données.
-- Toutes les actions réussissent tout le temps.
+- Toutes les actions « réussissent » tout le temps.
 - Il n'y a aucun message d'erreur.
 
 </Column>
 
 <Column>
 
-:::note Repository Git &#8203;<Highlight color="tip">2 points</Highlight>
+:::note Dépôt Git &#8203;<Highlight color="tip">2 points</Highlight>
 
-Un minimum de 6 commits de tailles comparables. Au moins un commit par activité. 
+Un minimum de 6 commits de tailles comparables. Au moins un commit par activité.
 
-Il n'y a pas un commit avec tout dedans et les autres vides. Les commits décrivent l'avancement du projet dans un français correct (passe Word). (Instructions : [ici](https://info.cegepmontpetit.ca/git) & [ici](../cours/git) )
+Il ne doit pas y avoir un seul commit contenant tout alors que les autres sont vides. Les messages de commit doivent décrire l'avancement du projet dans un français correct (vérifié avec Word). (Instructions : [ici](https://info.cegepmontpetit.ca/git) & [ici](../cours/git) )
 
-Ces points sont conditionnés à la remise d'au moins un commit par 2 séances de cours.
+Ces points sont conditionnés à la remise d'au moins un commit toutes les deux séances de cours.
 
 :::
 
@@ -43,12 +44,12 @@ Ces points sont conditionnés à la remise d'au moins un commit par 2 séances d
 
 :::info Activité de connexion <Highlight color="tip">2 points</Highlight>
 
-L'application doit démarrer sur l'activité connexion.
+L'application doit démarrer sur l'activité de connexion.
 
-- un champ pour le nom de l'utilisateur
-- un champ pour le mot de passe, qui est caché (.....)
-- un bouton de connexion qui amène à l'activité d'accueil
-- un bouton inscription qui mène à l'activité d'inscription
+- Un champ pour le nom de l'utilisateur.
+- Un champ pour le mot de passe, masqué.
+- Un bouton « Connexion » qui amène à l'activité d'accueil.
+- Un bouton « Inscription » qui mène à l'activité d'inscription.
 
 :::
 
@@ -56,10 +57,10 @@ L'application doit démarrer sur l'activité connexion.
 
 L'activité d'inscription permet à l'utilisateur de créer un compte.
 
-- un champ pour le nom de l'utilisateur
-- un champ pour le mot de passe, qui est caché (.....)
-- un champ pour la confirmation du mot de passe, caché (.....)
-- un bouton inscription qui mène à l'activité d'accueil (un utilisateur qui crée un compte est automatiquement connecté)
+- Un champ pour le nom de l'utilisateur.
+- Un champ pour le mot de passe, masqué.
+- Un champ pour la confirmation du mot de passe, masqué.
+- Un bouton « Inscription » qui mène à l'activité d'accueil (un utilisateur qui crée un compte est automatiquement connecté).
 
 :::
 
@@ -72,14 +73,14 @@ L'activité d'inscription permet à l'utilisateur de créer un compte.
 L'activité d'accueil affiche la liste des tâches de l'utilisateur.
 
 - &#8203;<Highlight color="tip">1 point</Highlight> Il faut un bouton de type *FAB* (*Floating Action Button*) qui mène à l'activité de création d'une tâche.
-- &#8203;<Highlight color="tip">1 point</Highlight> Un appui sur un item de la liste mène à l'activité de consultation.
-- &#8203;<Highlight color="tip">3 points</Highlight> Une liste en mode recyclerView. Pour chaque élément d'information, vous pouvez choisir d'afficher du texte et/ou un élément graphique. Vous devez faire preuve d'imagination pour l'affichage. Chaque item de la liste contient :
+- &#8203;<Highlight color="tip">1 point</Highlight> Un appui sur un élément de la liste mène à l'activité de consultation.
+- &#8203;<Highlight color="tip">2 points</Highlight> Une liste : pour chaque élément d'information, vous pouvez choisir d'afficher du texte et/ou un élément graphique. Vous devez faire preuve d'imagination pour l'affichage. Chaque élément de la liste contient :
   - le nom de la tâche
-  - le pourcentage d'avancement de la tâche (ex : 30%)
+  - le pourcentage d'avancement de la tâche
   - le pourcentage du temps écoulé entre la date de création et la date d'échéance
   - la date d'échéance
 
-Votre activité doit montrer une liste d'au moins 200 items codés en dur avec un nom et une date de votre choix.
+Votre activité doit montrer une liste d'au moins 200 éléments codés en dur avec un nom et une date de votre choix.
 
 :::
 
@@ -91,9 +92,9 @@ Votre activité doit montrer une liste d'au moins 200 items codés en dur avec u
 
 L'activité de création permet de créer une tâche qui s'ajoutera dans la liste des tâches de l'utilisateur.
 
-- un champ pour le nom de la tâche
-- un moyen d'entrer la date d'échéance de la tâche
-- un bouton d'ajout qui mène à l'activité d'accueil
+- Un champ pour le nom de la tâche.
+- Un moyen d'entrer la date d'échéance de la tâche.
+- Un bouton d'ajout qui mène à l'activité d'accueil.
 
 :::
 
@@ -124,20 +125,9 @@ Les informations affichées sont codées en dur en attendant le TP2.
 
 Il permet d'accéder rapidement à toutes les activités principales :
 
-- &#8203;<Highlight color="tip">1 point</Highlight> Le tiroir est **présent** dans toutes les activités **SAUF** inscription et connexion.
-On a le nom de l'utilisateur courant affiché (codé en dur). Il y a les options **Accueil**, **Ajout de tâche** et **Déconnexion**.
-- &#8203;<Highlight color="tip">3 points</Highlight> Le tiroir **fonctionne** dans toutes les activités (**SAUF** inscription et connexion). Accueil amène à l'activité d'accueil, Ajout de tâche amène à l'activité de création et Déconnexion amène à l'activité de connexion.
-- &#8203;<Highlight color="tip">1 point</Highlight> Il y a le hamburger dans l'ActionBar qui déclenche le tiroir.
-
-:::
-
-</Column>
-
-<Column>
-
-:::danger Portrait et paysage
-
-&#8203;<Highlight color="danger">Notation négative!</Highlight> Votre projet doit être lisible et fonctionnel en mode portrait ET paysage pour chaque activité. Vous perdez &#8203;<Highlight color="danger">1 point pour chaque activité</Highlight> où un élément n'est pas accessible ou fonctionnel dans l'un ou l'autre des modes portrait et paysage.
+- &#8203;<Highlight color="tip">1 point</Highlight> Le tiroir est **présent** dans toutes les activités **SAUF** inscription et connexion. Le nom de l'utilisateur courant est affiché (codé en dur). Il y a les options **Accueil**, **Ajout de tâche** et **Déconnexion**.
+- &#8203;<Highlight color="tip">2 points</Highlight> Le tiroir **fonctionne** dans toutes les activités (**SAUF** inscription et connexion). « Accueil » amène à l'activité d'accueil, « Ajout de tâche » amène à l'activité de création et « Déconnexion » amène à l'activité de connexion.
+- &#8203;<Highlight color="tip">1 point</Highlight> Il y a l'icône « hamburger » dans la barre supérieure qui ouvre le tiroir.
 
 :::
 
@@ -147,17 +137,20 @@ On a le nom de l'utilisateur courant affiché (codé en dur). Il y a les options
 
 :::note Logo &#8203;<Highlight color="tip">1 point</Highlight>
 
-Ajoutez un logo personnalisé à votre application. Le choix vous appartient, mais le logo doit être libre de droit.
+Ajoutez un logo personnalisé à votre application. Le choix vous appartient, mais le logo doit être libre de droits.
 
 :::
 
-:::note Multilingue &#8203;<Highlight color="tip">2 points</Highlight>
+</Column>
 
-Vous devez traduire tous les textes de l'interface graphique existante en français et anglais.
+<Column>
 
-L'orthographe doit être correcte, les textes ne doivent pas contenir de fautes dans la version française.
+:::danger Portrait et paysage
+
+&#8203;<Highlight color="danger">Notation négative !</Highlight> Votre projet doit être lisible et fonctionnel en mode portrait ET paysage pour chaque activité. Vous perdez &#8203;<Highlight color="danger">1 point pour chaque activité</Highlight> où un élément n'est pas accessible ou fonctionnel dans l'un ou l'autre des modes (portrait ou paysage).
 
 :::
+
 
 </Column>
 
@@ -166,12 +159,13 @@ L'orthographe doit être correcte, les textes ne doivent pas contenir de fautes 
 
 :::danger Fonctionnement global &#8203;<Highlight color="danger">4 points négatifs</Highlight>
 
-Votre application doit fonctionner sans plantage et correctement. Ce pointage fonctionne en négatif. Si l'application fonctionne correctement en tout temps, vous conservez votre note. Dans le cas contraire, vous perdez des points avec un maximum de 4. Essayez votre application sur un téléphone 5 pouces (Pixel 2) en mode portrait.
+Votre application doit fonctionner sans plantage et correctement. Ce pointage fonctionne en négatif. Si l'application fonctionne correctement en tout temps, vous conservez votre note. Dans le cas contraire, vous perdez des points dans la limite maximale de 4. Essayez votre application sur un téléphone 5 pouces (Pixel 6, 7, 8 ou 9) en mode portrait.
 
 - Plantage de l'application &#8203;<Highlight color="danger">-1 point</Highlight>
 - Interface illisible &#8203;<Highlight color="danger">-1 point</Highlight>
-- Information affichée incohérente &#8203;<Highlight color="danger">-1 point</Highlight>
+- Informations affichées incohérentes &#8203;<Highlight color="danger">-1 point</Highlight>
 - Éléments d'interface non traduits &#8203;<Highlight color="danger">-1 point</Highlight>
+- Écran cassé en mode paysage &#8203;<Highlight color="danger">-1 point</Highlight>
 - Autre cas ...
 
 :::
