--- a/web/docs/02-tp/02-tp2.md
+++ b/web/docs/02-tp/02-tp2.md
@@ -50,8 +50,8 @@ Ces points sont conditionnés à la remise d'au moins un commit par 2 séances d
 
 Vous devez effectuer les appels de connexion et d'inscription depuis les écrans correspondant.
 
-- &#8203;<Highlight color="tip">2 points</Highlight> **`/api/id/signin`** en **POST**, classes de transfert sont SigninRequest et SigninResponse.
-- &#8203;<Highlight color="tip">2 points</Highlight> **`/api/id/signup`** en **POST**, classes de transfert sont SignupRequest et SigninResponse.
+- &#8203;<Highlight color="tip">2 points</Highlight> **`/id/connexion`** en **POST**, classes de transfert sont SigninRequest et SigninResponse.
+- &#8203;<Highlight color="tip">2 points</Highlight> **`/id/inscription`** en **POST**, classes de transfert sont SignupRequest et SigninResponse.
 
 La classe de réponse est la même pour les 2 car une inscription effectue également la connexion, il s'agit de SigninResponse.
 
@@ -74,8 +74,8 @@ SI VOUS NE FAITES PAS INSCRIPTION ET CONNEXION, VOUS NE POURREZ PAS FAIRE LES OP
 
 Vous codez les appels qui permettent de récupérer la liste des tâches pour l'écran d'accueil et de créer une nouvelle tâche. Les appels sont authentifiés, vous n'avez pas à gérer les messages d'erreur (ce sera dans la phase 3).
 
-- &#8203;<Highlight color="tip">1 point</Highlight> **`/api/add`** en **POST**, envoie un AddTaskRequest et ne reçoit rien.
-- &#8203;<Highlight color="tip">2 points</Highlight> **`/api/home`** en **GET**, n'envoie rien (identifié grâce à ton cookie), reçoit une liste de HomeItemResponse.
+- &#8203;<Highlight color="tip">1 point</Highlight> **`/tache/ajout`** en **POST**, envoie un AddTaskRequest et ne reçoit rien.
+- &#8203;<Highlight color="tip">2 points</Highlight> **`/tache/accueil`** en **GET**, n'envoie rien (identifié grâce à ton cookie), reçoit une liste de HomeItemResponse.
 
 ::::
 
@@ -91,8 +91,8 @@ SI VOUS NE POUVEZ PAS CRÉER DE TÂCHE, VOUS NE POURREZ PAS FAIRE LA SUITE.
 
 Vous codez les appels pour l'écran de consultation / modification d'une tâche.
 
-- &#8203;<Highlight color="tip">1 point</Highlight> **`/api/detail/{id}`** en **GET**, envoie l'id de la tâche et reçoit un TaskDetailResponse. Permet la récupération du détail de la tâche.
-- &#8203;<Highlight color="tip">1 point</Highlight> **`/api/progress/{id}/{valeur}`** en **GET**, envoie l'id de la tâche et la nouvelle valeur d'avancement entre 0 et 100. Permet de changer le pourcentage d'avancement.
+- &#8203;<Highlight color="tip">1 point</Highlight> **`/tache/detail/{id}`** en **GET**, envoie l'id de la tâche et reçoit un TaskDetailResponse. Permet la récupération du détail de la tâche.
+- &#8203;<Highlight color="tip">1 point</Highlight> **`/tache/progres/{idTache}/{valeur}`** en **GET**, envoie l'id de la tâche et la nouvelle valeur d'avancement entre 0 et 100. Permet de changer le pourcentage d'avancement.
 
 ::::
 
@@ -108,7 +108,7 @@ Vous codez les appels pour l'écran de consultation / modification d'une tâche.
 
 La déconnexion se fait à partir du tiroir de navigation. Elle doit être fonctionnelle dans tous les écrans avec le tiroir.
 
-- &#8203;<Highlight color="tip">1 point</Highlight> **`/api/id/signout`** en **POST**.
+- &#8203;<Highlight color="tip">1 point</Highlight> **`/id/deconnexion`** en **POST**.
 - &#8203;<Highlight color="tip">1 point</Highlight> La déconnexion fonctionne dans tous les écrans avec tiroir de navigation.
 
 :::
